fix reply description too long

--- a/contest/static/contest/css/contest.css
+++ b/contest/static/contest/css/contest.css
@@ -22,8 +22,13 @@ SOFTWARE.
   color: green;
 }
 
+td.word-block {
+	word-wrap:break-word;
+}
+
+/*
 div.inline>ul>li {
   position: absolute;
   display: inline;
-}
+}*/
 
